[package]
name = "try_match"
version = "0.2.3"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/yvt/try_match-rs"
description = """
An expression macro to match a pattern and return the bound variables in `Result`.
"""
keywords = ["match", "pattern", "macro"]
categories = ["rust-patterns", "no-std"]

[features]
default = ["implicit_map"]
implicit_map = ["try_match_inner"]
std = []

[dependencies]
try_match_inner = { version = "= 0.3.0", path = "inner", optional = true }

[workspace]
