[package]
name = "try_match"
version = "0.4.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT/Apache-2.0"
rust-version = "1.56"
readme = "README.md"
repository = "https://github.com/yvt/try_match-rs"
description = """
An expression macro to match a pattern and return the bound variables in `Result`.
"""
keywords = ["match", "pattern", "macro", "variant", "enum"]
categories = ["rust-patterns", "no-std"]

[features]
default = ["implicit_map"]
implicit_map = ["try_match_inner"]
unstable = []
std = []

_doc_cfg = []

[dependencies]
try_match_inner = { version = "0.5.0", path = "inner", optional = true }

[workspace]

[dev-dependencies]
trybuild = "1.0.80"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

