[package]
name = "try_match_inner"
version = "0.5.1"
authors = ["yvt <i@yvt.jp>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yvt/try_match-rs"
description = """
The internal procedural macro of `try_match`
"""

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2.0.15", features = ["full"] }
